--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "rm -rf dist/ && npm run build:esm",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
-    "postpublish": "git push && git push --tags"
+    "postpublish": "git push && git push --tags",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
     "eslint-plugin-import": "^2.25.1",
+    "patch-package": "^6.4.7",
     "rollup": "^2.58.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.4"
