--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "target": "ES2015",
     "module": "ES2020",
-    "lib": ["es2017", "es7", "es6", "dom"],
+    "lib": ["es2018", "es2017", "es7", "es6", "dom"],
     "outDir": "./dist",
     "declaration": true,
     "strict": true,
